objects/SF_Async__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>Additional information to pass to the run</description>
    <label>Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>