objects/SF_Async__c/fields/Before_Cancelling__c.field-meta.xml
<CustomField>
    <fullName>Before_Cancelling__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Maximum retries allowed.</description>
    <label>Before Cancelling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>