objects/SF_Async__c/fields/Executed__c.field-meta.xml
<CustomField>
    <fullName>Executed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates success (default False).</description>
    <label>Executed</label>
    <type>Checkbox</type>
</CustomField>