objects/SF_Async__c/fields/label__c.field-meta.xml
<CustomField>
    <fullName>label__c</fullName>
    <description>A name to understand what the task does</description>
    <label>label</label>
    <length>25</length>
    <type>Text</type>
</CustomField>