objects/SF_Async__c/fields/Task_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Class_Name__c</fullName>
    <description>Name of the Apex class to implement.</description>
    <label>Task Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>