objects/SF_Async__c/fields/Tasks_Per_Worker_Limit__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Per_Worker_Limit__c</fullName>
    <description>Maximum tasks of this record type to process per worker run. When null, uses Async_Framework_Configuration__mdt.Tasks_Per_Worker_Default__c.</description>
    <label>Tasks Per Worker Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>