objects/SF_Async__c/fields/Tries__c.field-meta.xml
<CustomField>
    <fullName>Tries__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Current number of attempts (default 0).</description>
    <label>Tries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>