objects/SF_Async__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>label__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Scheduled_Time__c</columns>
    <columns>Task_Class_Name__c</columns>
    <columns>Executed__c</columns>
    <columns>Cancelled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>